Revert to java 17 because tomee supports only 17